[gd_scene load_steps=17 format=3 uid="uid://naombmq55b7i"]

[ext_resource type="Texture2D" uid="uid://dgyyitmg5j7ww" path="res://graphics/characters.svg" id="1_6oqut"]
[ext_resource type="Script" path="res://enemy.gd" id="1_rtd73"]
[ext_resource type="PackedScene" uid="uid://bs63m2cdq0u2d" path="res://molotov.tscn" id="2_kiepm"]
[ext_resource type="Script" path="res://healthBar.gd" id="3_qvtot"]
[ext_resource type="Texture2D" uid="uid://fmmntaca5p2v" path="res://graphics/happyFace.png" id="4_srcjr"]
[ext_resource type="Texture2D" uid="uid://c2df5tbkl364s" path="res://graphics/smileFace.png" id="5_7kgoa"]
[ext_resource type="Texture2D" uid="uid://cox3ouo8y2n04" path="res://graphics/worriedFace.png" id="6_w26mq"]
[ext_resource type="Texture2D" uid="uid://p2ayj6ucwcp2" path="res://graphics/angryFace.png" id="7_0a8wg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4e010"]

[sub_resource type="CircleShape2D" id="CircleShape2D_52oxt"]

[sub_resource type="Gradient" id="Gradient_v8ly6"]
colors = PackedColorArray(1, 1, 1, 1, 0.593134, 0.593134, 0.593134, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6aqcm"]
gradient = SubResource("Gradient_v8ly6")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_lqq56"]
offsets = PackedFloat32Array(0, 0.62963, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vsort"]
gradient = SubResource("Gradient_lqq56")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i6o5w"]
emission_shape = 1
emission_sphere_radius = 5.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 15.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.1
scale_max = 0.1
color_ramp = SubResource("GradientTexture1D_vsort")

[sub_resource type="CircleShape2D" id="CircleShape2D_t0r03"]
radius = 75.0

[node name="Enemy" type="Node2D"]
script = ExtResource("1_rtd73")
molotovScene = ExtResource("2_kiepm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.272727, 4.76837e-07)
scale = Vector2(0.127273, 0.127273)
texture = ExtResource("1_6oqut")
region_enabled = true
region_rect = Rect2(49.8348, 101.81, 185.777, 110.555)

[node name="EnemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2(0, 7.04)
shape = SubResource("CircleShape2D_4e010")

[node name="EnemyBody" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody"]
shape = SubResource("CircleShape2D_52oxt")

[node name="HealthBarNode" type="Node2D" parent="."]
visible = false
top_level = true

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarNode"]
offset_left = -20.0
offset_top = -19.0
offset_right = 44.0
offset_bottom = 45.0
scale = Vector2(0.627605, 0.129096)
value = 50.0
texture_progress = SubResource("GradientTexture2D_6aqcm")
script = ExtResource("3_qvtot")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../HealthBarNode")
update_rotation = false
update_scale = false

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="TentTimer" type="Timer" parent="."]

[node name="TrashTimer" type="Timer" parent="."]

[node name="MolotovTimer" type="Timer" parent="."]
autostart = true

[node name="HappyParticle" type="GPUParticles2D" parent="."]
top_level = true
amount = 2
process_material = SubResource("ParticleProcessMaterial_i6o5w")
texture = ExtResource("4_srcjr")
lifetime = 2.0
randomness = 0.5

[node name="SmileParticle" type="GPUParticles2D" parent="."]
top_level = true
amount = 2
process_material = SubResource("ParticleProcessMaterial_i6o5w")
texture = ExtResource("5_7kgoa")
lifetime = 2.0
randomness = 0.45

[node name="WorriedParticle" type="GPUParticles2D" parent="."]
top_level = true
amount = 2
process_material = SubResource("ParticleProcessMaterial_i6o5w")
texture = ExtResource("6_w26mq")
lifetime = 2.0
randomness = 0.5

[node name="AngryParticle" type="GPUParticles2D" parent="."]
top_level = true
amount = 2
process_material = SubResource("ParticleProcessMaterial_i6o5w")
texture = ExtResource("7_0a8wg")
lifetime = 2.0
randomness = 0.5

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../HappyParticle")
update_rotation = false
update_scale = false

[node name="RemoteTransform2D3" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../SmileParticle")
update_rotation = false
update_scale = false

[node name="RemoteTransform2D4" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../WorriedParticle")
update_rotation = false
update_scale = false

[node name="RemoteTransform2D5" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../AngryParticle")
update_rotation = false
update_scale = false

[node name="TrashArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashArea"]
shape = SubResource("CircleShape2D_t0r03")

[connection signal="body_entered" from="EnemyArea" to="." method="_on_collider_body_entered"]
[connection signal="body_exited" from="EnemyArea" to="." method="_on_collider_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="TentTimer" to="." method="_on_tent_timer_timeout"]
[connection signal="timeout" from="TrashTimer" to="." method="_on_trash_timer_timeout"]
[connection signal="timeout" from="MolotovTimer" to="." method="_on_molotov_timer_timeout"]
